# skitza-v2

./: .gitignore  .mcp.json  .prettierignore  CLAUDE.md  README.md  morning_summary.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.claude/: settings.json
.claude/agents/: skitza-tdd-implementer.md  skitza-ux-critic.md
.claude/commands/: checkpoint.md  docs-audit.md  skitza-migrate.md  skitza-preview.md  skitza-verify.md
.claude/hooks/: bmad-enforce.sh
.github/workflows/: changelog-update.yml  ci.yml  desktop-build.yml  tauri-release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  .env.local.example  components.json  eslint.config.mjs  instrumentation.ts  next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
docs/: INDEX.md  audit-report.md  bmad-workflow.md  contributor-onboarding.md  session_recap.md
docs/decisions/: 2026-04-22-session-insights-draft.md  360-prd-answers.md
docs/design/: buttons.md
docs/master-plan/: batch-b-followups.md
docs/plans/: 2026-04-16-skitza-phase-1-weeks-3-5.md  2026-04-17-morning-delta.md  2026-04-17-skitza-booking-v1-design.md  2026-04-17-skitza-v2-design.md  2026-04-17-skitza-v2-plan.md  2026-04-18-phase-g-delta.md  2026-04-18-phase-h-delta.md  2026-04-19-artist-app-design.md  (+5 more)
scripts/: build-onboarding-pdf.py
(+1217 files in other folders)
